# rust-client

./: .env.example  .gitignore  Cargo.toml  README.md  abi.json  network.example.json  network.json
client/: .gitignore  Cargo.toml
client/src/: main.rs
client/src/api/get/: block_data.rs  blockchain_metrics.rs  mod.rs  state.rs  transactions_data.rs
client/src/api/post/: mod.rs  user_operation.rs
client/src/api/requester/: get_block_by_index.rs  get_last_block.rs  mod.rs
client/src/block_producer/: block_producer.rs
client/src/consensus/: README.md  mod.rs  sync_with_network.rs
client/src/consensus/utils/: get_blocks.rs
client/src/database/: mod.rs  set_up.rs
client/src/database/read/: mod.rs  read_blocks.rs  read_mempool.rs  read_state.rs  read_transaction.rs  read_utxo.rs  read_validators.rs
client/src/database/write/: mod.rs  write_state.rs  write_transaction.rs  write_utxo.rs
client/src/interface/: mod.rs  nodes.rs
client/src/interface/block/: block.rs  mod.rs
client/src/interface/event/: event_signature.rs  exitRequest.rs  exit_claimed.rs  validator_added.rs  validator_exit_request.rs
client/src/interface/finalized_transaction/: transaction.rs
client/src/interface/pending_transactions/: pending_user_transaction.rs
client/src/interface/utxo/: utxo.rs
client/src/listener/: event_decoder.rs  mod.rs
client/src/prover_poster/: mod.rs  poster.rs
host/: Cargo.toml
host/src/: lib.rs
lmdb_database/: data.mdb  lock.mdb
src/: main.rs
src/api/: mod.rs
src/block_producer/: block_producer.rs
src/consensus/: sync_with_network.rs
(+46 files in other folders)
