[package]
name = "client"
version = "0.1.0"
edition = "2021"
default-run = "client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsai-sdk = "0.6.1"
dotenv = "0.15.0"
futures-util = "0.3.30"
hex = "0.4.3"
keccak-hash = "0.10.0"
serde_json = "1.0.113"
tokio = "1.36.0"
ethers = "2.0.13"
web3 = "0.19.0"
lmdb = "0.8.0"
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
axum = "0.7.4"
axum-server = "0.6.0"
eth_merkle_tree = "0.1.1"
reqwest = "0.11"
tower-http = { version = "0.5.2", features = ["full"] }
http = "1.0.0"
hyper = "1.2.0"
chrono = "0.4"
risc0-zkvm = { version = "0.20.1"}

host = { path = "../host" }
